--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,15 @@ app-example
 # generated native folders
 /ios
 /android
+
+.env.local
+
+.env.local
+
+.env.local
+
+.env.local
+
+.env.local
+
+.env.local
